--- a/menuGlowne.css
+++ b/menuGlowne.css
@@ -4,7 +4,7 @@ body
 	
 	
 
-background-image: url("img/wykres.jpg");
+background-image: url("img/paper.png");
 background-color:gray;
 width: 100%;
 height: 100%;
