--- a/przychod.css
+++ b/przychod.css
@@ -4,7 +4,7 @@ body
 	
 	
 
-background-image: url("img/bck3.jpg");
+background-image: url("img/paper.png");
 background-color:gray;
 width: 100%;
 height: 100%;
@@ -25,7 +25,7 @@ margin-top:50px;
 
 .mt
 {
-margin-top:130px;	
+margin-top:80px;	
 	
 }
 
@@ -46,6 +46,7 @@ textarea
 	text-transform: uppercase;
 	margin-top: 5px;
 	margin-bottom:5px;
+	width:250px;
 	
 }
 
@@ -107,9 +108,18 @@ box-shadow: 0px 0px 10px 3px rgba(204,204,204,0.9);
 resize:none;	
 }
 
+.button
+{
+margin-bottom: 50px;	
+}
 
+[name = 'comment']
+{
+text-align:center;
+margin-top:5px;
+margin-bottom: 5px;
 
-
+}
 
 
 
