--- a/wydatek.css
+++ b/wydatek.css
@@ -4,7 +4,7 @@ body
 	
 	
 
-background-image: url("img/bck3.jpg");
+background-image: url("img/paper.png");
 background-color:gray;
 width: 100%;
 height: 100%;
@@ -25,7 +25,7 @@ margin-top:50px;
 
 .mt
 {
-margin-top:130px;	
+margin-top:80px;	
 	
 }
 
@@ -46,6 +46,7 @@ textarea
 	text-transform: uppercase;
 	margin-top: 5px;
 	margin-bottom:5px;
+	width:250px;
 	
 }
 
@@ -117,6 +118,7 @@ resize:none;
 {
 	background-color: skyblue;
 	opacity:0.8;
+	width:250px;
 	
 }
 
@@ -133,6 +135,19 @@ text-decoration: underline;
 
 }
 
+.button
+{
+	
+margin-bottom:50px;	
+}
+
+
+legend
+{
+text-align:center;
+margin-left:auto;
+margin-right:auto;
+}
 
 
 
