--- a/logowanie.css
+++ b/logowanie.css
@@ -11,7 +11,22 @@ background-size: cover;
 }
 
 
+h2
+{
+letter-spacing:3px;
+color: gray;
+transition: all 1s ease-out;
+width:300px;
+margin-left:auto;
+margin-right:auto;
+font-size:40px;
+	
+}
 
+h2:hover
+{
+color:	#3596b5;
+}
 
 
 
