--- a/przychod.css
+++ b/przychod.css
@@ -15,6 +15,15 @@ background-size: cover;
 
 }
 
+h2
+{
+margin-left:auto;
+margin-right:auto;
+text-align:center;
+width:300px;
+letter-spacing:3px;
+}
+
 
 .mt-50
 {
