--- a/rejestracja.css
+++ b/rejestracja.css
@@ -11,6 +11,19 @@ background-size: cover;
 }
 
 
+h2
+{
+letter-spacing:3px;
+font-size: 50px;
+color: white;
+transition: all 1s ease-out;
+}
+
+h2:hover
+{
+color:	#3596b5;
+}
+
 
 
 
