--- a/bilans.css
+++ b/bilans.css
@@ -24,6 +24,32 @@ background-size: cover;
 
 }
 
+
+h2
+{
+margin-left:auto;
+margin-right:auto;
+text-align:center;
+width:500px;
+letter-spacing:3px;
+font-size: 30px;
+}
+
+.container
+{
+	
+	
+}
+
+.title
+{
+
+color: skyblue;
+text-align:center;
+font-size: 10px;
+	
+}
+
 th
 {
 border: 3px solid black;	
@@ -46,19 +72,20 @@ letter-spacing:3px;
 td
 {
 border: 1px solid black;	
+text-align:center;
 	
 }
 
 .mt-50
 {
-margin-top:50px;	
+margin-top:30px;	
 	
 }
 
 
 .mt
 {
-margin-top:130px;	
+margin-top:30px;	
 	
 }
 
