--- a/wydatek.css
+++ b/wydatek.css
@@ -16,16 +16,37 @@ background-size: cover;
 }
 
 
+h2
+{
+margin-left:auto;
+margin-right:auto;
+text-align:center;
+width:500px;
+letter-spacing:3px;
+font-size: 30px;
+}
+
+
+.title
+{
+
+color: skyblue;
+text-align:center;
+font-size: 10px;
+	
+}
+
+
 .mt-50
 {
-margin-top:50px;	
+margin-top:30px;	
 	
 }
 
 
 .mt
 {
-margin-top:80px;	
+margin-top:40px;	
 	
 }
 
